(fix): Remove header and hero block extra space

--- a/theme/themes/eea/extras/banner.less
+++ b/theme/themes/eea/extras/banner.less
@@ -228,4 +228,10 @@
   }
 }
 
+@media print {
+  .eea.banner .image .gradient .content {
+    padding-top: 0;
+  }
+}
+
 .loadUIOverrides();
